# woodsman

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/kinoscope/: main.py
src/woodsman/: __init__.py  main.py
