[project]
name = "kinoscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.38",
    "streamlit-extras>=0.5.5",
    "streamlit>=1.42.1",
    "tabulate>=0.9.0",
]

[project.scripts]
kinoscope = "kinoscope:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
