[project]
name = "woodsman"
version = "0.1.0"
description = "Woodsman is a generic SQL database viewer Inspired by Kino's iconic weapon, it empowers users to navigate, explore, and export SQL databases (SQLite and PostgreSQL) with interactive data exploration, filtering, and export capabilities."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.38",
    "streamlit-extras>=0.5.5",
    "streamlit>=1.42.1",
    "tabulate>=0.9.0",
]

[project.scripts]
woodsman = "woodsman.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
